# deal-finder

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml
.claude/: launch.json
deal_finder/: __init__.py  config.py  db.py  languages.py  main.py  matching.py  models.py  pipeline.py  progress.py  registry.py  scheduler.py  schemas.py  service.py  util.py
deal_finder/adapters/: _browser_car.py  autolina.py  autoscout24.py  autouncle.py  base.py  demo.py  facebook.py  ricardo.py  tutti.py
deal_finder/ai/: __init__.py  client.py  dealbreakers.py  questions.py  translate.py
deal_finder/browser/: __init__.py  adapter.py  detect.py  errors.py  extract.py  fb_login.py  human.py  page.py  safari_applescript.py  session.py  solve.py  stealth.py
deal_finder/categories/: base.py  car.py
deal_finder/notify/: __init__.py  browser_open.py  email.py  telegram.py  telegram_setup.py
deal_finder/notify/templates/: match_email.html
deal_finder/web/: api.py  routes.py
deal_finder/web/templates/: base.html  settings.html  watch_detail.html  watch_form.html  watches.html
deploy/: README_deploy.md  com.dealfinder.plist  setup_pmset.sh
tests/: conftest.py  test_adapters_autolina.py  test_adapters_autoscout24.py  test_adapters_autouncle.py  test_adapters_facebook.py  test_adapters_tutti.py  test_ai.py  test_api.py  test_browser_adapter.py  test_browser_extract.py  test_browser_open.py  test_db_migration.py  test_matching.py  test_notify.py  test_notify_telegram.py  test_pipeline.py  test_registry.py  test_safari_applescript.py
tests/fixtures/: autolina_listings.json  autoscout24_listings.json  autouncle_listings.json  tutti_listings.json  tutti_search.json
