[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-finder"
version = "0.1.0"
description = "Periodically scan second-hand marketplaces for specific items, enrich with a local LLM, and email matches."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlmodel>=0.0.16",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pydantic-settings>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "tenacity>=8.2",
    # AutoScout24.ch: calls the site's own public, unauthenticated JSON API directly
    # (api.autoscout24.ch) — no browser or anti-bot bypass needed for that adapter.
    "autoscout24-scraper>=0.1.0",
    # tutti.ch: calls tutti's own public GraphQL API directly (tutti.ch/api/v10/graphql)
    # — plain requests, no browser or anti-bot bypass needed for that adapter.
    "tutti-scraper>=0.2.0",
    # Ricardo.ch: drives its own bundled, anti-fingerprinting Camoufox browser to get
    # past Cloudflare's Managed Challenge — self-contained, no shared deal_finder
    # browser session/profile needed for this adapter anymore.
    "ricardo-scraper>=0.2.0",
    # Autolina.ch: parses the site's server-rendered HTML directly (autolina.ch) via the
    # autolina-scraper package — mirrors autoscout24-scraper's design/signatures, but no
    # public JSON API is involved; plain requests, no browser needed for this adapter.
    # >=0.2.0 adds the `max_results` cap on scrape()'s detail-fetch phase, and detail-page
    # description/adTitle extraction (both missing in 0.1.0). >=0.3.1 makes max_results
    # mean "the newest N" (results sorted newest-first by carId descending) rather than
    # an arbitrary site-returned order.
    "autolina-scraper>=0.3.1",
    # AutoUncle.ch: parses schema.org JSON-LD (unfiltered search + detail pages) plus a
    # filtered-search RSC/GraphQL path via the autouncle-scraper package -- no browser
    # needed. AutoUncle marks its listing data CC BY 4.0. Requires Python >=3.13 (see
    # requires-python above -- this, not just the facebook extra, now needs that floor).
    # >=0.3.0 required: max_results only caps the detail-fetch phase's *request cost*
    # from that version onward -- 0.1.0 had no cap at all (a single popular model can
    # have 2000+ listings); 0.2.0's cap trimmed the returned set but still fetched every
    # match's detail page first (recency data is itself detail-only on this site).
    "autouncle-scraper>=0.3.0",
]

[project.optional-dependencies]
# Facebook Marketplace adapter: a separate extra because of its ToS/ban risk, so projects
# that don't want Facebook scanning can skip it. Installed by default via the Pipfile
# ("facebook" extra). (Its own Python floor of >=3.13 no longer sets it apart from the
# rest of the core dependencies -- autouncle-scraper above now needs that floor too.)
# >=0.2.0 pins playwright==1.60.0 (was ~=1.61), matching ricardo-scraper's exact pin --
# 0.1.0 conflicted with ricardo-scraper and couldn't be installed alongside it.
facebook = ["facebook-marketplace-scraper>=0.2.2"]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["deal_finder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
